@@ -35,7 +35,8 @@ Version 1.3.1+svn:
       opening a menu (among others) will now emit small sounds.
     * If deprecated WML is being encountered and error message will be shown,
       this way creators of WML code can be easily informed about the problems.
-
+    * Show total amount of visible villages.
+   
   * Language and translations
     * Updated translations: Bulgarian, Czech, Danish, Dutch, French, German,
       Hungarian, Italian, Norwegian, Portuguese (Brazil).
