@@ -59,6 +59,7 @@ Version 1.3.1+svn:
    * new sounds for user interface events
    * added the option to show warnings about deprecated WML usage
    * added the "ignore all" option to continue observing during massive OOS
+   * show total amount of visible villages (patch #698)
  * misceleanous changes and bug fixes
    * an friendly healer hill now stop poisoned unit to lose HP
    * a unit that dies while attacking will now correctly play it's own death
